--- a/nightly-job/requirements.txt
+++ b/nightly-job/requirements.txt
@@ -1,13 +1,13 @@
-pandas==2.2.1
-numpy==1.26.4
-google-cloud-bigquery==3.20.1
-spacy==3.7.4
-spacy-fastlang==2.1.0
-db-dtypes==1.2.0
+pandas==1.3.5
+numpy==1.21.0
+google-cloud-bigquery==3.0.1
+spacy>=3.0.0,<4.0.0
+spacy-fastlang==1.0.1
+db-dtypes==1.0.0
 
-pytest==8.1.1
-pytest-asyncio==0.23.6
+pytest==7.1.2
+pytest-asyncio==0.18.3
 
 # https://spacy.io/usage/models#models-download
 # https://spacy.io/models/en#en_core_web_lg
-https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl#egg=en_core_web_lg
+https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.3.0/en_core_web_lg-3.3.0-py3-none-any.whl#egg=en_core_web_lg
