--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   gcp-gcr: circleci/gcp-gcr@0.12.0
-  python: circleci/python@2.0.3
+  python: circleci/python@2.1.1
 
 workflows:
   search-terms-sanitization:
@@ -18,5 +18,8 @@ workflows:
             branches:
               only: main
       - python/test:
-            app-dir: nightly-job/ 
-            test-tool-args: --asyncio-mode strict 
+          executor:
+            name: python
+            tag: '3.10'
+          app-dir: nightly-job/ 
+          test-tool-args: --asyncio-mode strict 
