--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,16 @@ orbs:
   gcp-gcr: circleci/gcp-gcr@0.12.0
   python: circleci/python@2.1.1
 
+jobs:
+  test:
+    executor: 
+      name: python
+      tag: '3.10'
+    steps:
+      - python/test:
+          app-dir: nightly-job/
+          test-tool-args: --asyncio-mode strict
+
 workflows:
   search-terms-sanitization:
     jobs:
@@ -17,9 +27,4 @@ workflows:
           filters:
             branches:
               only: main
-      - python/test:
-          executor:
-            name: python
-            tag: '3.10'
-          app-dir: nightly-job/ 
-          test-tool-args: --asyncio-mode strict 
+      - test
