Adds the dockerflow library. Adds a new parameter to control partition deletion.

--- a/nightly-job/Dockerfile
+++ b/nightly-job/Dockerfile
@@ -8,6 +8,7 @@ RUN pip install -r requirements.txt
 
 COPY sanitation_job.py ./
 COPY query_sanitization.py ./
+COPY logging_config.py ./
 COPY Names_2010Census.csv ./
 
 CMD [ "python", "./sanitation_job.py", "--sanitized_term_destination", "mozdata.search_terms_unsanitized_analysis.prototype_sanitized_data", "--job_reporting_destination", "mozdata.search_terms_unsanitized_analysis.prototype_sanitation_job_metadata_v2", "--unsanitized_term_sample_destination", "mozdata.search_terms_unsanitized_analysis.prototype_unsanitized_sample_data"]
